--- a/stylus/helpers/mixins.styl
+++ b/stylus/helpers/mixins.styl
@@ -34,20 +34,35 @@ box($width, $height = $width){
 //  triangle arrow
 //------------------------------------------------------------------------------
 //down
-triangle-down($size = 5px){
+triangle-down($size = 5px,$color = currentColor){
     width: 0;
     height: 0;
     border-left: $size solid transparent;
     border-right: $size solid transparent;
-    border-top: $size solid;
+    border-top: $size solid $color;
 }
 //up
-triangle-up($size = 5px){
+triangle-up($size = 5px,$color = currentColor){
     width: 0;
     height: 0;
     border-left: $size solid transparent;
     border-right: $size solid transparent;
-    border-bottom: $size solid;
+    border-bottom: $size solid $color;
+}
+//left
+triangle-left($size = 5px,$color = currentColor){
+    width: 0;
+    height: 0;
+    border-top: $size solid transparent;
+    border-bottom: $size solid transparent;
+    border-right: $size solid $color;
+}
+triangle-right($size = 5px,$color = currentColor){
+    width: 0;
+    height: 0;
+    border-top: $size solid transparent;
+    border-bottom: $size solid transparent;
+    border-left: $size solid $color;
 }
 //------------------------------------------------------------------------------
 //  Media Queries based on the viewport
