--- a/stylus/pages/homepage/product.styl
+++ b/stylus/pages/homepage/product.styl
@@ -19,9 +19,9 @@
 	    	}
 	    }
     }
-
-	display: flex;
-
+	&{
+		display: flex;
+	}
 	&__{
 		&content{
 			flex: 1;
@@ -34,6 +34,33 @@
 
 				+mq(gt-md){
 					padding: 45px;
+				}
+			}
+			&:after{
+				content: '';
+				triangle-right(21px,$color_white);
+				pointer-events: none;
+				position: absolute;				
+				top: 0;
+				bottom: 0;			
+				left: 100%;
+    			z-index: 10;
+    			margin: auto;
+			}
+			&--alt{
+				&:after{
+					border-left-width:0;
+					left: auto;
+					right: 100%;
+					triangle-left(21px,$color_white);
+				}
+			}
+		}
+		&arrow{
+			&-{
+				&left,				
+				&right{
+					position: relative;
 				}
 			}
 		}
@@ -65,11 +92,7 @@
 				bottom: 0;
 				background-color: rgba($color_black, .2)
 			}
-		}
-		&list{
-			max-width: 390px;
-			margin: 0 auto;
-		}
+		}		
 		&item{
 			display: flex;
 			justify-content: space-between;
@@ -101,6 +124,29 @@
 			color: $color_base;
 			padding-left: 12px;
 			font-family: $family_monospace;
+		}
+		&table{
+			text-align: right;
+			& ~ &{
+				margin-top: 30px;
+			}	
+		}
+		&row{
+			display: flex;
+			
+			&:first-child{
+				font-weight: $weight_bold;
+				border-bottom 1px dashed rgba($color_black,.15);
+			}
+		}
+		&col{
+			flex: 1;
+			padding: 3px 0;
+			
+			&:first-child{						
+				flex: 1.5;
+				text-align: left;	
+			}
 		}
 	}
 }
