--- a/stylus/layout/nav.styl
+++ b/stylus/layout/nav.styl
@@ -1,53 +1,49 @@
 .me-{$nav}{
-	display: inline-block;
-	vertical-align: middle;	
-
+	
 	>li{
 		display: inline-block;
 		vertical-align: top;
 
 		>a{
-			padding: 6px 15px;						
+			padding: 0 9px;
 			display: inline-block;
 			text-shadow: 1px 1px 2px rgba($color_black,.1);
-			
-			&:hover{
-				color: $color_white;
-			}
+			color: $color_white;
 		}
-	}				
-	
+	}
 	&__{
-		
+
 		&inner{
 			position: relative;
 			white-space: nowrap;
 			
-			&:after{
-				content: "";
-				triangle-down(6px);
-				display: inline-block;					
-				margin-left: -15px;
-				vertical-align: middle;
+			& > a{
+				&:after{
+					content: "";
+					triangle-down(6px);
+					display: inline-block;
+					margin-left: 3px;
+					vertical-align: middle;
+				}
 			}
-
 			& ul{
 				display: none;
-				position: absolute;				
+				position: absolute;
 			    top: 100%;
-			    right: 3px;
+			    right: 9px;
 			    z-index: 111;
 				padding: 3px 0;
-			    background: #fff;
+			    background: $color_white;
 			    color: $color_base;
 			    min-width: 120px;
 			    border-radius: 2px;
 			    box-shadow: 0 2px 2px 2px rgba($color_black, 0.12);
+			    line-height: 1.5;
 
 				& a{
 					display: block;
 					padding: 6px 12px;
-					
+
 					&:hover{
 						background-color: #fde706;
 					}
