--- a/stylus/web.styl
+++ b/stylus/web.styl
@@ -1,5 +1,5 @@
 // On terminal go to stylus folder and run the command below
-//   stylus -w web.styl -u autoprefixer-stylus -o ../assets/css/style.css
+//   stylus -w stylus/web.styl -u autoprefixer-stylus -o assets/css/style.css
 
 
 //@import "test/_test"
