--- a/stylus/helpers/variables.styl
+++ b/stylus/helpers/variables.styl
@@ -27,9 +27,9 @@ $family_monospace            	= Menlo, Monaco, Consolas, Courier New, monospace
 $size_xs                     	= 10px
 $size_sm                     	= 12px
 $size_st                     	= 14px
-$size_md                    	= 24px
-$size_lg                     	= 32px
-$size_xl                     	= 45px
+$size_md                    	= 16px
+$size_lg                     	= 18px
+$size_xl                     	= 24px
 
 //------------------------------------------------------------------------------
 //  font-weight
@@ -43,9 +43,9 @@ $weight_bolder					= 700;
 //  heading
 //------------------------------------------------------------------------------
 //font-size
-$size_h1                     	= $size_xl
-$size_h2                     	= $size_lg
-$size_h3                     	= $size_md
+$size_h1                     	= 45px
+$size_h2                     	= 32px
+$size_h3                     	= $size_xl
 $size_h4                     	= $size_st
 $size_h5                     	= $size_sm
 $size_h6                     	= $size_xs
@@ -60,3 +60,11 @@ $base_line_height              	= 1.4
 //colors
 $base_text                     	= $color_base
 $base_fill                     	= $color_white
+
+//------------------------------------------------------------------------------
+//container
+//------------------------------------------------------------------------------
+$container_gutter			 	= 30px
+$container_inner				= 1000px
+$container_width				= $container_inner + ($container_gutter * 2)
+
