--- a/stylus/layout/header.styl
+++ b/stylus/layout/header.styl
@@ -1,5 +1,5 @@
 .me-{$header}{
-	padding: 30px $container-padding;
+	padding: 30px $container_gutter;
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -12,7 +12,7 @@
 	+mq(gt-lg){
 		padding: 39px 60px;
 	}
-	+mq(gt-sm){
+	+mq(gt-md){
 		&--affix{
 			position: fixed;
 			padding-top: 0;
@@ -27,25 +27,36 @@
 	&__{
 		&brand{
 			font-size: 0;
-			margin-right: 30px;			
+			margin-right: 30px;
 		}
 		&logo{
-			box(144px, 100%);					   
+			box(145px, 100%);
 		    background: url(../images/brand/mechetronz-white.svg) no-repeat;
 		    background-size: contain;
-		    background-position: center;		    
+		    background-position: center;
 		    display: block;
+
+		    +mq(md){
+		    	width: 240px;
+		    }
 		}
 		&container{
-			display: flex;			
+			display: flex;
 			align-items: center;
+
+			+mq(md){
+				justify-content: space-between;
+			}
 		}
 		&nav{
-			display: flex;
-			flex: 1;
-			align-items: center;
-			justify-content: space-between;
-			
+			display: none;
+
+			+mq(gt-md){
+				display: flex;
+				flex: 1;
+				align-items: center;
+				justify-content: space-between;
+			}
 			[href^="tel"],
 			[href^="mailto"]{
 				display: inline-block;
