--- a/stylus/pages/homepage/banner.styl
+++ b/stylus/pages/homepage/banner.styl
@@ -17,43 +17,60 @@
         right: 0;
         left: 0;
         z-index: @z-index + 1;
-        background-color: rgba($color_brand, .6);
+        background-color: rgba($color_brand,.6);
         display: block;
     }
-
     &__{
         &content{
-            padding: 240px 0 180px;
+            padding: 180px 0;
             position: relative;
             z-index: @z-index + 2;
             min-height: 500px;
             text-shadow: 1px 1px 2px rgba($color_black,.1);
+            
+            +mq(gt-md){
+                padding-top: 240px;
+            }            
         }
         &title{
-            font-size: 72px;            
-            // margin-bottom: 30px!important;
-            font-weight: $weight_bold;            
+            font-size: $size_h1;
+            line-height: 1.1;
+            margin-bottom: 30px!important;
+            font-weight: $weight_bold;
+
+            +mq(gt-md){
+                font-size: 72px;                
+            }
         }
         &quote{
-            font-size: $size_lg;        
-            letter-spacing: 2px;
-            font-weight: $weight_light;
             position: relative;
+            font-size: $size_xl;
+            font-weight: $weight_light;
 
+            +mq(gt-md){
+                font-size: $size_h2;
+                letter-spacing: 2px;
+            }
             &:before{
                 content:'';
                 display: block;
-                position: absolute;
-                right: 100%;
-                top: 21px;
-                margin-right: 9px;
-                box(30px, 2px);
                 border-radius: 2px;
                 background-color: currentColor;
+                position: absolute;
+                right: 100%;
+                top: 15px;
+                margin-right: 3px;
+                box(15px, 2px);
+
+                +mq(gt-md){
+                    top: 21px;
+                    margin-right: 9px;
+                    box(30px, 2px);
+                }
             }
         }
         &launch{
-            font-size: 18px;
+            font-size: $size_lg;
             margin-top: 21px;
             display: inline-block;
         }
