--- a/stylus/pages/homepage/product.styl
+++ b/stylus/pages/homepage/product.styl
@@ -1,12 +1,15 @@
 .me-{$product}{
 	&s{
-		background: $color_white;
-		box-shadow: 1px 1px 4px rgba($color_black, 0.24);
-	    border-radius: 2px;
+		+mq(gt-sm){
+			background: $color_white;
+			box-shadow: 1px 1px 4px rgba($color_black, 0.24);
+		    border-radius: 2px;
+	    }
 
 	    & ul{
-	    	display: flex;
-
+	    	+mq(gt-sm){
+	    		display: flex;
+			}
 	    	& li{
 	    		flex: 1;
 	    	}
@@ -20,32 +23,44 @@
 	    }
     }
 	&{
-		display: flex;
+		+mq(gt-sm){
+			display: flex;
+			height: 100%;
+		}
+		+mq(sm){
+			background: $color_white;
+			box-shadow: 1px 1px 4px rgba($color_black, 0.24);
+		    border-radius: 2px;
+		    margin-bottom: 30px;
+	    }
 	}
 	&__{
 		&content{
-			flex: 1;
-			min-height: 250px;
+			flex: 1;			
 			position: relative;
 
 			>div{
 				padding: 30px;
 				text-align: center;
 
-				+mq(gt-md){
-					padding: 45px;
-				}
+				// +mq(gt-md){
+				// 	padding: 45px;
+				// }
 			}
 			&:after{
 				content: '';
 				triangle-right(21px,$color_white);
 				pointer-events: none;
-				position: absolute;				
+				position: absolute;
 				top: 0;
-				bottom: 0;			
+				bottom: 0;
 				left: 100%;
     			z-index: 10;
     			margin: auto;
+    			
+    			+mq(sm){
+					display: none;
+    			}
 			}
 			&--alt{
 				&:after{
@@ -58,7 +73,7 @@
 		}
 		&arrow{
 			&-{
-				&left,				
+				&left,
 				&right{
 					position: relative;
 				}
@@ -68,7 +83,7 @@
 			text-transform: uppercase;
 			font-size: $size_st;
 			font-weight: $weight_bold;
-			
+
 			> span{
 				font-weight: $weight_normal;
 				font-size: $size_sm;
@@ -81,6 +96,7 @@
 			background-repeat: no-repeat;
 			background-position: center;
 			background-size: cover;
+			min-height: 250px;
 			position: relative;
 
 			&:after{
@@ -92,7 +108,7 @@
 				bottom: 0;
 				background-color: rgba($color_black, .2)
 			}
-		}		
+		}
 		&item{
 			display: flex;
 			justify-content: space-between;
@@ -129,11 +145,11 @@
 			text-align: right;
 			& ~ &{
 				margin-top: 30px;
-			}	
+			}
 		}
 		&row{
 			display: flex;
-			
+
 			&:first-child{
 				font-weight: $weight_bold;
 				border-bottom 1px dashed rgba($color_black,.15);
@@ -142,10 +158,10 @@
 		&col{
 			flex: 1;
 			padding: 3px 0;
-			
-			&:first-child{						
+
+			&:first-child{
 				flex: 1.5;
-				text-align: left;	
+				text-align: left;
 			}
 		}
 	}
