--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,11 @@ body {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
+@media (max-width: 999px) {
+  body {
+    font-size: 16px;
+  }
+}
 article,
 aside,
 details,
@@ -438,7 +443,6 @@ a[href^="mailto"]:before {
 }
 .me-footer {
   padding: 60px 0 90px;
-  font-size: 12px;
   position: relative;
   background-color: #222;
   color: #fff;
@@ -458,6 +462,7 @@ a[href^="mailto"]:before {
 @media (min-width: 1000px) {
   .me-footer {
     padding: 150px 0;
+    font-size: 12px;
   }
 }
 .me-footer:before {
@@ -495,6 +500,11 @@ a[href^="mailto"]:before {
 @media (max-width: 999px) {
   .me-footer__col {
     margin-top: 42px;
+  }
+}
+@media (max-width: 999px) {
+  .me-footer__logo {
+    width: 180px;
   }
 }
 .me-footer address {
@@ -599,6 +609,18 @@ a[href^="mailto"]:before {
   font-size: 18px;
   margin-top: 21px;
   display: inline-block;
+  border: 2px solid;
+  border-radius: 2px;
+  padding: 12px 30px;
+}
+.me-banner__launch:hover {
+  background-color: #fdb302;
+}
+@media (min-width: 1000px) {
+  .me-banner__launch {
+    padding: 18px 42px;
+    font-size: 24px;
+  }
 }
 .me-banner a {
   color: inherit;
@@ -628,6 +650,11 @@ a[href^="mailto"]:before {
     -webkit-box-direction: reverse;
         -ms-flex-direction: row-reverse;
             flex-direction: row-reverse;
+  }
+}
+@media (min-width: 1000px) {
+  .me-product {
+    height: 360px;
   }
 }
 @media (min-width: 800px) {
