--- a/stylus/base/normalize.styl
+++ b/stylus/base/normalize.styl
@@ -22,6 +22,10 @@ body {
     line-height: $base_line_height;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
+    
+    +mq(md){
+        font-size: $size_md;
+    }
 }
 
 // HTML5 display definitions
