--- a/stylus/pages/homepage/banner.styl
+++ b/stylus/pages/homepage/banner.styl
@@ -76,6 +76,7 @@
             border: 2px solid;
             border-radius: 2px;
             padding: 12px 30px;
+            font-weight: $weight_bold;
 
             &:hover{
                 background-color: $color_brand;
