--- a/stylus/pages/homepage/product.styl
+++ b/stylus/pages/homepage/product.styl
@@ -21,8 +21,8 @@
 	    	}
 	    }
 	    &--alt{
-	    	^[0]{
-	    		+mq(gt-md){
+	    	& ^[0]{
+	    		+mq(gt-sm){
 					height: 360px;
 				}
 	    	}
