--- a/stylus/helpers/variables.styl
+++ b/stylus/helpers/variables.styl
@@ -54,7 +54,7 @@ $size_h6                     	= $size_xs
 //  base
 //------------------------------------------------------------------------------
 $base_family                   	= $family_sans_serif
-$base_size                     	= $size_st
+$base_size                     	= $size_md
 $base_line_height              	= 1.4
 
 //colors
