--- a/stylus/pages/homepage/product.styl
+++ b/stylus/pages/homepage/product.styl
@@ -4,6 +4,7 @@
 			background: $color_white;
 			box-shadow: 1px 1px 4px rgba($color_black, 0.24);
 		    border-radius: 2px;
+		    font-size: $size_st;
 	    }
 	    & ul{
 	    	+mq(gt-sm){
@@ -37,7 +38,7 @@
 			background: $color_white;
 			box-shadow: 1px 1px 4px rgba($color_black, 0.24);
 		    border-radius: 2px;
-		    margin-bottom: 30px;
+		    margin: 0 (- $container_gutter/2) 30px;
 	    }
 	}
 	&__{
